RESOLVED FIXED51307
Text emphasis marks are not repainted correctly in flipped writing modes
https://bugs.webkit.org/show_bug.cgi?id=51307
Summary Text emphasis marks are not repainted correctly in flipped writing modes
mitz
Reported 2010-12-19 13:24:29 PST
Patch forthcoming
Attachments
Add flippedness check (42.68 KB, patch)
2010-12-19 13:26 PST, mitz
zwarich: review+
mitz
Comment 1 2010-12-19 13:26:07 PST
Created attachment 76958 [details] Add flippedness check
mitz
Comment 2 2010-12-19 13:32:26 PST
Note You need to log in before you can comment on or make changes to this bug.