Text emphasis marks are not repainted correctly in flipped writing modes https://bugs.webkit.org/show_bug.cgi?id=51307

Reviewed by Cameron Zwarich.

WebCore:

Tests: fast/repaint/text-emphasis-h.html
       fast/repaint/text-emphasis-v.html

* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::addTextBoxVisualOverflow): Added flippedness check.

LayoutTests:

* fast/repaint/text-emphasis-h-expected.checksum: Added.
* fast/repaint/text-emphasis-h-expected.png: Added.
* fast/repaint/text-emphasis-h-expected.txt: Added.
* fast/repaint/text-emphasis-h.html: Added.
* fast/repaint/text-emphasis-v-expected.checksum: Added.
* fast/repaint/text-emphasis-v-expected.png: Added.
* fast/repaint/text-emphasis-v-expected.txt: Added.
* fast/repaint/text-emphasis-v.html: Added.



Canonical link: https://commits.webkit.org/64668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74326 268f45cc-cd09-0410-ab3c-d52691b4dbfc